--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,7 +22,7 @@
 	border-bottom-left-radius: 0;
 }
 body {
-  background-image: url("/amazon-ad.jpg"); 
+  background-image: url("https://www.techwalls.com/wp-content/uploads/2014/08/amazon-ad.jpg"); 
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed; 
